base/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  replicas: 1

  selector:
    matchLabels:
      app: grafana

  template:
    metadata:
      labels:
        app: grafana

    spec:
      containers:
        - name: grafana
          image: grafana/grafana:latest

          ports:
            - containerPort: 3000

          volumeMounts:
            - name: datasource
              mountPath: /etc/grafana/provisioning/datasources

      volumes:
        - name: datasource
          configMap:
            name: grafana-datasources
