base/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  type: ClusterIP

  selector:
    app: grafana

  ports:
    - port: 3000
      targetPort: 3000
