base/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: grafana

spec:
  ingressClassName: nginx

  rules:
    - host: grafana.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: grafana
                port:
                  number: 3000
